# TermsAI

./: .gitignore  .gitlab-ci.yml  IDEA.md  MILESTONES.md  README.md  app.py  app_cli.py  chains.py  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.yaml  docker-compose.yml  getting_started.sh  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: secrets_template.toml
app/: app.py  app_cli.py
backend/: backend.dockerfile  celeryworker.dockerfile  page_content.txt  pyproject.toml
backend/app/: app.py  app_api.py  main.py  pyproject.toml  worker-start.sh
backend/app/app/: worker.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: question.py  summarize.py
backend/app/app/core/: celery_app.py  config.py
backend/app/app/llm/: __init__.py  chains.py
backend/app/app/schemas/: __init__.py  question.py  summarize.py
backend/app/app/workers/: summarizer.py
backend/prototype/: app.py  requirements.txt
backend/tests/: conftest.py
clients/mac/macocr-main/: Package.swift
clients/mac/macocr-main/Sources/macocr/: Runner.swift  start.swift
clients/streamlit/: app.py  chains.py  doc_extract.py  docker-compose.yaml  pyproject.toml  requirements.txt  test.py  utils.py
clients/streamlit/.streamlit/: secrets_template.toml
clients/streamlit/app_extra/: description.py  display_metadata.py  processing.py  sidebar.py  upload.py
clients/streamlit/process_doc/: extract.py  ocrspace_api.py  process.py  process_doc.py  utils.py
doc/: contract_use_case_flow.drawio  technical.md
prototypes/: insta.txt  openai.txt  p-test.py  test.py
scripts/: getting_started.sh
tools/visual_debugging/: visual_debugging.ipynb
