[tool.poetry]
name = "streamlit-client"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.9.7 || >3.9.7,<4.0.0"
streamlit = "^1.28.0"
openai = "^0.28.1"
langchain = "^0.0.329"
redis = "^5.0.1"
tiktoken = "^0.5.1"
chromadb = "^0.4.15"
beautifulsoup4 = "^4.12.2"
pypdf = "^3.17.0"
ocrspace = "^2.3.0"
pdfminer = "^20191125"
pdf2image = "^1.16.3"
pypdf2 = "^3.0.1"
pdfplumber = "^0.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
