[tool.poetry]
name = "streamlit-client"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.9.7 || >3.9.7,<4.0.0"
streamlit = "*"
openai = "*"
langchain = "*"
langchain-openai = "*"
langchain-community = "*"
redis = "*"
tiktoken = "*"
chromadb = "*"
beautifulsoup4 = "*"
pypdf = "^3.17.0"
ocrspace = "^2.3.0"
pypdf2 = "^3.0.1"
pdfplumber = "^0.10.3"
streamlit-ext = "*"
pysqlite3-binary = "^0.5.2.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
